# libkompex

./: README.txt  README2.txt  wscript
cmake/: CMakeLists.txt
debian/: README.Debian  README.source  changelog  control  copyright  docs  rules
